--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,5 +8,10 @@
   <%= link_to list.title, lists_path(list.id) %>
 </span>
 
-
+<P>画像</P>
+<% if list.image.attached? %>
+ <%= image_tag list.image, size: "200x200" %>
+<% else %>
+ <%= image_tag 'no_image', size: "200x200" %>
+<% end %>
 <% end %>
