--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,7 +5,7 @@
 <p>タイトル</p>
 
 <span>
-  <%= link_to list.title, lists_path(list.id) %>
+  <%= link_to list.title, list_path(list.id) %>
 </span>
 
 <P>画像</P>
